--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@inertiajs/inertia": "^0.11.0",
         "@vue/compiler-sfc": "^3.2.22",
         "cross-env": "^7.0.2",
         "laravel-mix": "^6.0.41",
@@ -22,6 +23,9 @@
     "dependencies": {
         "@vue/babel-plugin-jsx": "^1.1.1",
         "@vue/compat": "^3.2.33",
-        "vue": "^3.0"
+        "form-backend-validation": "^2.3.3",
+        "inflector-js": "^1.0.1",
+        "vue": "^3.0",
+        "vuex": "^4.0.2"
     }
 }
